--- a/templates/base.html
+++ b/templates/base.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
+  <link href="{{ url_for("static", filename="assets/style.css") }}" media="all" rel="stylesheet" type="text/css" />
   <title>Test</title>
 </head>
 <body>
