--- a/templates/base.html
+++ b/templates/base.html
@@ -2,14 +2,24 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <link href="{{ url_for("static", filename="assets/style.css") }}" media="all" rel="stylesheet" type="text/css" />
-  <title>Test</title>
+  {% include "_style.html" %}
+  {% include "_js.html" %}
+{% block title %}
+  <title>some title</title>
+{% endblock title %}
 </head>
 <body>
-  <h1><a href="{{ url_for("index") }}">My site</a></h1>
+  <div class="container">
+{% block header %}
+  {% include "_header.html" %}
+{% endblock header %}
 {% block content %}
-  <p>Default content to be displayed.</p>
+  <p>some content</p>
 {% endblock content %}
+{% block footer %}
+  {% include "_footer.html" %}
+{% endblock footer %}
+  </div>
 </body>
 </html>
 
