--- a/templates/page.html
+++ b/templates/page.html
@@ -1,7 +1,11 @@
 {% extends "base.html" %}
 
+{% block title %}
+  <title>{{ page.title }} | some title</title>
+{% endblock title %}
+
 {% block content %}
-  <h2>{{ page.title }}</h2>
+  <h1>{{ page.title }}</h1>
   {{ page.html|safe }}
 {% endblock content %}
 
