--- a/templates/tag.html
+++ b/templates/tag.html
@@ -1,7 +1,11 @@
 {% extends "base.html" %}
 
+{% block title %}
+  <title>tag: {{ tag }} | some title</title>
+{% endblock title %}
+
 {% block content %}
-  <h2>List of stuff tagged <em>{{ tag }}</em></h2>
+  <h2>List of pages tagged <em>{{ tag }}</em></h2>
   {% with pages=pages %}
     {% include "_list.html" %}
   {% endwith %}
