--- a/templates/base.html
+++ b/templates/base.html
@@ -2,6 +2,13 @@
 <html>
 <head>
   <meta charset="utf-8">
+{% block meta %}
+  {% if page %}
+    {% with page = page %}
+      {% include "_meta.html" %}
+    {% endwith %}
+  {% endif %}
+{% endblock meta %}
   {% include "_style.html" %}
   {% include "_js.html" %}
 {% block title %}
