--- a/templates/_footer.html
+++ b/templates/_footer.html
@@ -1,5 +1,9 @@
 {# code for your footer goes here #}
 <footer>
-  <hr />
-  some copyright text here?
+    <h6>monkeycycle | Michael Pereira</h6>
+    <p>creative coder</p>
+    <ul>
+        <li>twitter</li>
+        <li>instagram</li>
+    </ul>
 </footer>
