--- a/templates/project.html
+++ b/templates/project.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block title %}
-  <title>{{ page.title }} | some title | monkeycycle</title>
+  <title>{{ page.title }} | project | monkeycycle</title>
 {% endblock title %}
 
 {% block content %}
