More of the same.

--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
 {% include "_js_head.html" %}
 
 {% block title %}
-  <title>some title | monkeycycle</title>
+  <title>some title</title>
 {% endblock title %}
 
     </head>
